# SimulateurFerroviaire

./: .gitignore  AboutDialog_8cpp.html  AboutDialog_8cpp__incl.map  AboutDialog_8cpp__incl.md5  AboutDialog_8h.html  AboutDialog_8h__dep__incl.map  AboutDialog_8h__dep__incl.md5  AboutDialog_8h__incl.map  AboutDialog_8h__incl.md5  AboutDialog_8h_source.html  Application_8cpp.html  Application_8cpp__incl.map  Application_8cpp__incl.md5  Application_8h.html  Application_8h.js  Application_8h__dep__incl.map  Application_8h__dep__incl.md5  Application_8h__incl.map  Application_8h__incl.md5  Application_8h_source.html  CMakeLists.txt  CoordinateXY_8h.html  CoordinateXY_8h.js  CoordinateXY_8h__dep__incl.map  CoordinateXY_8h__dep__incl.md5  CoordinateXY_8h_source.html  DoubleSwitchDetector_8cpp.html  DoubleSwitchDetector_8cpp__incl.map  DoubleSwitchDetector_8cpp__incl.md5  DoubleSwitchDetector_8h.html  DoubleSwitchDetector_8h.js  DoubleSwitchDetector_8h__dep__incl.map  DoubleSwitchDetector_8h__dep__incl.md5  DoubleSwitchDetector_8h__incl.map  DoubleSwitchDetector_8h__incl.md5  DoubleSwitchDetector_8h_source.html  Doxyfile  FileOpenDialog_8cpp.html  FileOpenDialog_8cpp__incl.map  FileOpenDialog_8cpp__incl.md5  (+1624 more)
.claude/: settings.local.json
.github/workflows/: auto_sync_issues.yml  build.yml  build.yml.txt  build_debug.yml  build_release.yml  doxygen.yml  project-sync.yml
SimulateurFerroviaire/: RCa06968  RCa26872  RCb06968  RCc06968  Resource.h  SimulateurFerroviaire.cpp  SimulateurFerroviaire.rc  SimulateurFerroviaire.vcxproj  SimulateurFerroviaire.vcxproj.filters  SimulateurFerroviaire_vcxproj.filters  framework.h
SimulateurFerroviaire/Data/: exempleLine.geojson  saujon_tremblade.geojson
SimulateurFerroviaire/Exemple/: Exemple_1.geojson  Exemple_2.geojson  Exemple_3.geojson  Exemple_4.geojson  Exemple_5.geojson  map(1).geojson
SimulateurFerroviaire/Modules/: GeoParsingTask.cpp  GeoParsingTask.h
d0/d00/: Element_8cpp__incl.map  Element_8cpp__incl.md5  GeoParsingTask_8h.html  GeoParsingTask_8h.js  GeoParsingTask_8h_source.html  GeometryUtils_8h__incl.map  GeometryUtils_8h__incl.md5  IntersectionMap_8h.html  IntersectionMap_8h.js  IntersectionMap_8h_source.html  PCCEdge_8h__dep__incl.map  PCCEdge_8h__dep__incl.md5  PathUtils_8h__dep__incl.map  PathUtils_8h__dep__incl.md5  classGeoParser__coll__graph.map  classGeoParser__coll__graph.md5  classGeographicProjection-members.html  classPhase1__GeoLoader-members.html  framework_8h__incl.map  framework_8h__incl.md5  structBlockSet.html  structBlockSet.js  structClassifiedNodes-members.html
d0/d01/: Application_8h__dep__incl.map  Application_8h__dep__incl.md5  GeoParserException_8h.html  GeoParserException_8h.js  GeoParserException_8h_source.html  Leaflet_8cpp.html  PCCGraphBuilder_8cpp.html  classInvalidTopologyException__inherit__graph.md5  classParserConfigIni-members.html  classTCORenderer-members.html  structRawPolyline.html  structRawPolyline.js
d0/d02/: PCCNode_8cpp.html  RawNetwork_8h__dep__incl.map  RawNetwork_8h__dep__incl.md5  StraightBlock_8h__incl.map  StraightBlock_8h__incl.md5  SwitchBlock_8cpp.html  classInvalidGeoJsonFormatException__coll__graph.md5  classPhase7__SwitchProcessor.html  classPhase7__SwitchProcessor.js  classTopologyData.html  classTopologyData.js  classTopologyGraph__coll__graph.map  classTopologyGraph__coll__graph.md5  structGeoParser_1_1CancelledException__coll__graph.map  structGeoParser_1_1CancelledException__coll__graph.md5  structGridCell-members.html  structTopologyExtractResult.html  structTopologyExtractResult.js
d0/d03/: GraphBuilder_8h.html  GraphBuilder_8h.js  GraphBuilder_8h__incl.map  GraphBuilder_8h__incl.md5  GraphBuilder_8h_source.html  PCCEdge_8h__incl.map  PCCEdge_8h__incl.md5  PipelineContext_8h__incl.map  PipelineContext_8h__incl.md5  SimulateurFerroviaire_8h__incl.map  SimulateurFerroviaire_8h__incl.md5  SplitNetwork_8h__dep__incl.map  SplitNetwork_8h__dep__incl.md5  SwitchOrientator_8cpp.html  classPhase2__GeometricIntersector__coll__graph.map  classPhase2__GeometricIntersector__coll__graph.md5  classStraightBlock__coll__graph.map  classStraightBlock__coll__graph.md5  classSwitchBlock-members.html  structSegmentId-members.html  structSegmentId.html  structSegmentId.js
d1/d00/: GeoParserException_8h__dep__incl.map  GeoParserException_8h__dep__incl.md5  Phase1__GeoLoader_8cpp.html  Phase1__GeoLoader_8cpp.js  modules.html  structIntersectionData__coll__graph.map  structIntersectionData__coll__graph.md5  structParserSettingsDialog_1_1DlgData-members.html  structTopologyGraph_1_1SnappedNodeKey__coll__graph.map  structTopologyGraph_1_1SnappedNodeKey__coll__graph.md5
d1/d01/: InteractiveElement_8h__incl.map  InteractiveElement_8h__incl.md5  MainWindow_8h__incl.map  MainWindow_8h__incl.md5  PCCLayout_8h__incl.map  PCCLayout_8h__incl.md5  PCCStraightNode_8cpp.html  classGeometryUtils-members.html  classPhase8__RepositoryTransfer__coll__graph.map  classPhase8__RepositoryTransfer__coll__graph.md5  classWebViewPanel__coll__graph.map  classWebViewPanel__coll__graph.md5  page_hmi.html  structAtomicSegment-members.html  structIntersectionPoint-members.html  structRawNetwork__coll__graph.map  structRawNetwork__coll__graph.md5  structTopoNode__coll__graph.map  structTopoNode__coll__graph.md5
d1/d02/: FileOpenDialog_8cpp__incl.map  FileOpenDialog_8cpp__incl.md5  IntersectionMap_8h__dep__incl.map  IntersectionMap_8h__dep__incl.md5  PCCEdge_8h.html  PCCEdge_8h.js  PCCEdge_8h_source.html  PCCNode_8h__dep__incl.map  PCCNode_8h__dep__incl.md5  Phase2__GeometricIntersector_8h.html  Phase2__GeometricIntersector_8h.js  Phase2__GeometricIntersector_8h_source.html  (+7 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_29.js  all_2a.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  (+117 more)
(+2841 files in other folders)
